--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-move": "^6.5.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-visibility-sensor": "^5.1.1",
+    "redux": "^4.1.2",
     "swiper": "^7.4.1",
     "web-vitals": "^2.1.3"
   },
